estilo da página de contato. Formulário completo e funcional

--- a/ipetour/src/components/contato/contato_formulario.css
+++ b/ipetour/src/components/contato/contato_formulario.css
@@ -1,3 +1,184 @@
-textarea#sabermais {
-  display: block;
+.contato_formulario {
+  width: 550px;
+  height: 550px;
+  margin: 200px auto;
+  border-radius: 12px;
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+  align-items: center;
+
+  & input:focus {
+    outline: none;
+    color: #333;
+  }
+}
+
+.campo_nome_contato_formulario {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  height: 60px;
+
+  & input {
+    width: 100%;
+    height: 45px;
+    border-radius: 12px;
+    background: #f0f0f0;
+    padding: 12px 12px;
+    border: none;
+
+    color: rgba(66, 70, 86, 0.85);
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+  }
+
+  & input::placeholder {
+    color: rgba(66, 70, 86, 0.43);
+  }
+}
+
+.telefone_e_email_contato_formulario {
+  display: flex;
+  width: 550px;
+  gap: 20px;
+}
+
+.campo_telefone_contato_formulario {
+  display: flex;
+  flex-direction: column;
+  width: 205px;
+  height: 60px;
+
+  & input {
+    width: 100%;
+    height: 45px;
+    border-radius: 12px;
+    background: #f0f0f0;
+    padding: 12px 12px;
+    border: none;
+
+    color: rgba(66, 70, 86, 0.85);
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+  }
+
+  & input::placeholder {
+    color: rgba(66, 70, 86, 0.43);
+  }
+}
+
+.campo_email_contato_formulario {
+  display: flex;
+  flex-direction: column;
+  width: 325px;
+  height: 60px;
+
+  & input {
+    width: 325px;
+    height: 45px;
+    border-radius: 12px;
+    background: #f0f0f0;
+    padding: 12px 12px;
+    border: none;
+
+    color: rgba(66, 70, 86, 0.85);
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+  }
+
+  & input::placeholder {
+    color: rgba(66, 70, 86, 0.43);
+  }
+}
+
+.numero_de_whatsapp_checkbox_contato_formulario {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+
+  & label {
+    display: flex;
+    flex-direction: row;
+    align-items: baseline;
+    gap: 8px;
+    color: #424656;
+  }
+}
+
+.campo_mensagem_contato_formulario {
+  display: flex;
+  flex-direction: column;
+  width: 550px;
+  height: 335px;
+
+  & textarea {
+    width: 100%px;
+    height: 320px;
+    align-items: flex-start;
+    resize: none;
+    overflow: auto;
+    border-radius: 12px;
+    background: #f0f0f0;
+    padding: 12px 12px;
+    border: none;
+
+    color: rgba(66, 70, 86, 0.85);
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+  }
+
+  & textarea::placeholder {
+    color: rgba(66, 70, 86, 0.43);
+  }
+
+  & textarea:focus {
+    outline: none;
+    color: #333;
+  }
+}
+
+.mensagem_de_erro_contato_formulario {
+  color: #dc2626;
+  font-size: 0.875rem;
+  margin-top: 0;
+}
+
+.botao_enviar_contato_formulario {
+  display: flex;
+  width: 100px;
+  height: 50px;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+  color: #fff;
+  border-radius: 10px;
+  border: 1px solid #fff;
+  background: #1486c9;
+  transition: background-color 0.4s ease;
+
+  /* H5-Body-Large */
+  font-size: var(--font-size-H6, 20px);
+  font-style: normal;
+  font-weight: 400;
+  line-height: 160%; /* 32px */
+}
+
+.botao_enviar_contato_formulario:hover:not(:disabled) {
+  background-color: #fff;
+  color: #1486c9;
+  border: 1px solid #1486c9;
+}
+
+.botao_enviar_contato_formulario:disabled {
+  background-color: #aaccee;
+  cursor: not-allowed;
 }
