--- a/ipetour/src/components/quem_somos/nosso_compromisso_quem_somos/nosso_compromisso_quem_somos.css
+++ b/ipetour/src/components/quem_somos/nosso_compromisso_quem_somos/nosso_compromisso_quem_somos.css
@@ -13,7 +13,7 @@
   line-height: normal;
 }
 
-.tamanho_parágrafo_nosso_compromisso_quem_somos {
+.tamanho_paragrafo_nosso_compromisso_quem_somos {
   left: 0;
   width: 1050px;
 }
