--- a/ipetour/src/components/destinos_page/ainda_nao_encontrou_destinos_page/ainda_nao_encontrou_destinos_page.css
+++ b/ipetour/src/components/destinos_page/ainda_nao_encontrou_destinos_page/ainda_nao_encontrou_destinos_page.css
@@ -1,6 +1,5 @@
 .ainda_nao_encontrou_destinos_page {
-  margin-top: 100px;
-  margin: auto;
+  margin: 100px auto;
   width: 1230px;
   height: 350px;
   display: flex;
