--- a/ipetour/src/pages/PaginaMobileTemporaria.css
+++ b/ipetour/src/pages/PaginaMobileTemporaria.css
@@ -84,6 +84,7 @@
   margin: 2rem auto;
   padding-left: 4%;
   padding-right: 4%;
+  padding-top: 4%;
   width: 100%;
   height: 15vh;
   justify-content: center;
