--- a/ipetour/src/pages/PaginaMobileTemporaria.css
+++ b/ipetour/src/pages/PaginaMobileTemporaria.css
@@ -79,6 +79,44 @@
   border: solid 0.1rem #1486C9;
 }
 
+
+.cards_de_serviços_mobile{
+  padding-top: 4%;
+  padding-bottom: 4%;
+  display: flex;
+  width: 100%;
+  margin: 0 auto;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+  border-radius: 1rem;
+
+  & .fundo_branco_transparente_mobile{
+    background-color: #ffffff52;
+    width: 100%;  
+    height: 100%;
+    position: absolute;
+  }
+}
+
+.conteiner_cards_mobile{
+  display: flex;
+  flex-wrap: wrap;
+  margin: auto;
+  gap: 2rem;
+}
+
+
+
+
+
+
+
+
+
+
+
+
 .footer_mobile{
   display: flex;
   margin: 2rem auto;
